skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__tab_decisions_detail_popup.snap
---
source: tests/snapshot_tabs.rs
expression: "common::render_model(&model)"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck  session demo-decisions  owner pi · %25 · /repo/demo  daemon: file-mode  elapsed 1h55m  AH:0 ISS:1 WF:0  P:1   fresh                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Daemon                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ decisions Enter opens answer detail──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Time      Session            Prompt tag                   Answer                                                                                                                                      │"
"│10:09:20  VST-404            external-fix-suggestions     Apply the reviewer fix for the launch path only; keep unrelated daemon…                                                                     │"
"│10:01:00  VST-404            merge-now                    Proceed after checks are green.                                                                                                             │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                           ┌ decision detail ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                           │"
"│                           │Session VST-404 · Resolve review prompt                                                                                                       │                           │"
"│                           │Time 2026-05-15T10:09:20+00:00                                                                                                                │                           │"
"│                           │Prompt tag external-fix-suggestions                                                                                                           │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │Answer                                                                                                                                        │                           │"
"│                           │Apply the reviewer fix for the launch path only; keep unrelated daemon subscriber changes out of scope, rerun cargo fmt, clippy, cargo test,  │                           │"
"│                           │and cargo insta before committing.                                                                                                            │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │Esc or Backspace returns to decisions list                                                                                                    │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           │                                                                                                                                              │                           │"
"│                           └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                           │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tab/Shift+Tab tabs  j/k select  r reload  Ctrl+N noise: hidden  / filter:off  Alt+M compact  ? help  q quit                                                                                            "
"                                                                                                                                                                                                        "
